--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,5 @@ sonar.projectKey=restart-rancher
 sonar.sources=./lib/index.js
 sonar.host.url=https://sonarcloud.io
 sonar.language = js
+sonar.coverage.exclusions =bin/*, node_modules/*
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
